complete_experiment_final.log
/home/ubuntu/project_venv/lib/python3.10/site-packages/torchvision/io/image.py:13: UserWarning: Failed to load image Python extension: '/home/ubuntu/project_venv/lib/python3.10/site-packages/torchvision/image.so: undefined symbol: _ZN3c1017RegisterOperatorsD1Ev'If you don't plan on using image functionality from `torchvision.io`, you can ignore this warning. Otherwise, there might be something wrong with your environment. Did you have `libjpeg` or `libpng` installed before building `torchvision` from source?
  warn(
Traceback (most recent call last):
  File "/home/ubuntu/ActiveCIrcuitDiscovery/run_comprehensive_experiment.py", line 52, in <module>
    from src.experiments.circuit_discovery_integration import CircuitDiscoveryIntegration, CircuitDiscoveryResult
  File "/home/ubuntu/ActiveCIrcuitDiscovery/src/__init__.py", line 24, in <module>
    from .circuit_analysis import RealCircuitTracer
  File "/home/ubuntu/ActiveCIrcuitDiscovery/src/circuit_analysis/__init__.py", line 4, in <module>
    from .real_tracer import RealCircuitTracer
  File "/home/ubuntu/ActiveCIrcuitDiscovery/src/circuit_analysis/real_tracer.py", line 161
    semantic_change=baseline_pred \!= modified_pred,
                                   ^
SyntaxError: unexpected character after line continuation character
